--- a/src/styles/components/spotify-track-display.css
+++ b/src/styles/components/spotify-track-display.css
@@ -26,6 +26,14 @@
     bottom: 0;
     background-color: crimson;
 }
+@media (max-width: 600px) {
+    .resolve-button {
+        right: 0;
+        font-size: 10px;
+        padding: 5px 10px;
+        height: 28px;
+    }
+}
 @media (max-width: 1024px) {
     .album-art {
         width: 100px;
